clusters/k3s-home/infrastructure/06-adguard-home/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
  namespace: networking
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "adguard.fletcherlabs.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard-home
          port: 3000
